The mod has been optimized